--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-<h1>>page</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>E-comerce</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <header>
+    <h1>E-comerce</h1>
+    <div class="container-icono">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth="1.5" stroke="currentColor"
+        class="icono">
+        <path strokeLinecap="round" strokeLinejoin="round"
+          d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+      </svg>
+      <div class="contador-productos">
+        <span id="contador">0</span>
+      </div>
+      <div class="container-cart-product hidden-cart">
+        <div class="cart-product">
+          <div class="info-cart-product">
+            <span class="cantidad-producto-carrito">1</span>
+            <p class="titulo-producto-carrito">Blosh</p>
+            <span class="precio-producto-carrito">$100</span>
+          </div>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+            stroke="currentColor" class="icono-close">
+            <path strokeLinecap="round" strokeLinejoin="round" d="M6 18 18 6M6 6l12 12" />
+          </svg>
+        </div>
+        <div class="total">
+          <h3>Total</h3>
+          <span class="total-pagar">$100</span>
+        </div>
+      </div>
+    </div>
+  </header>
+  <div class="container-items">
+    <div class="item">
+      <figure><img src="css/blosh.jpeg" alt="blosh dorado"></figure>
+      <div class="info-producto">
+        <h2>Blosh</h2>
+        <p class="price">$100</p>
+        <button>Añadir al Carrito</button>
+      </div>
+    </div>
+    <div class="item">
+      <figure><img src="css/crema.jpeg" alt="crema de manos"></figure>
+      <div class="info-producto">
+        <h2>Crema de manos</h2>
+        <p class="price">$120</p>
+        <button>Añadir al Carrito</button>
+      </div>
+    </div>
+    <div class="item">
+      <figure><img src="css/lapiz.jpeg" alt="lapiz de color"></figure>
+      <div class="info-producto">
+        <h2>Lapiz de Ojos</h2>
+        <p class="price">$10</p>
+        <button>Añadir al Carrito</button>
+      </div>
+    </div>
+    <div class="item">
+      <figure><img src="css/maquillaje.jpeg" alt="maquillaje"></figure>
+      <div class="info-producto">
+        <h2>Maquillaje</h2>
+        <p class="price">$200</p>
+        <button>Añadir al Carrito</button>
+      </div>
+    </div>
+    <div class="item">
+      <figure><img src="css/rimel.jpeg" alt="rimel, pestañas mas largas"></figure>
+      <div class="info-producto">
+        <h2>Rimel</h2>
+        <p class="price">$90</p>
+        <button>Añadir al Carrito</button>
+      </div>
+    </div>
+  </div>
+  <script  src="index.js"></script>
+</body>
+
+</html>
